Fixup spacing of reset and add id to Start button.

--- a/src/main/scss/_reset.scss
+++ b/src/main/scss/_reset.scss
@@ -23,24 +23,32 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+
 body {
+	height: 100vh;;
 	line-height: 1;
+	width: 100vw;;
 }
+
 ol, ul {
 	list-style: none;
 }
+
 blockquote, q {
 	quotes: none;
 }
+
 blockquote:before, blockquote:after,
 q:before, q:after {
 	content: '';
 }
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
