--- a/src/main/scss/js-quiz.scss
+++ b/src/main/scss/js-quiz.scss
@@ -1,1 +1,5 @@
 @use "./reset";
+
+#startButton {
+    display: block;
+}
